--- a/requirements.txt
+++ b/requirements.txt
@@ -20,13 +20,14 @@ dbus-python==1.3.2
 defer==1.0.6
 distro==1.9.0
 distro-info==1.7+build1
-Django==4.2.11
+Django==4.2.13
 docker==5.0.3
 docker-compose==1.29.2
 dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.20.1
 furo==0.0.0
+gunicorn==21.2.0
 gyp==0.1
 html5lib==1.1
 httplib2==0.20.4
@@ -91,5 +92,6 @@ wadllib==1.3.6
 webencodings==0.5.1
 websocket-client==1.7.0
 wheel==0.42.0
+whitenoise==6.6.0
 xdg==5
 xkit==0.0.0
