--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alabaster==0.7.12
 asgiref==3.7.2
 attrs==23.2.0
 Babel==2.10.3
+bcc==0.1.10
 beautifulsoup4==4.12.3
 blinker==1.7.0
 Brlapi==0.8.5
@@ -19,14 +20,13 @@ dbus-python==1.3.2
 defer==1.0.6
 distro==1.9.0
 distro-info==1.7+build1
-Django==4.2.13
+Django==4.2.11
 docker==5.0.3
 docker-compose==1.29.2
 dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.20.1
 furo==0.0.0
-gunicorn==21.2.0
 gyp==0.1
 html5lib==1.1
 httplib2==0.20.4
@@ -91,6 +91,5 @@ wadllib==1.3.6
 webencodings==0.5.1
 websocket-client==1.7.0
 wheel==0.42.0
-whitenoise==6.6.0
 xdg==5
 xkit==0.0.0
